@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.nc</groupId>
 	<artifactId>cedar-java</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.0-jdk20</version>
 	<name>${project.groupId}::${project.artifactId}</name>
 
 	<properties>
-		<java.version>18</java.version>
+		<java.version>20</java.version>
 		<junit.version>4.13.1</junit.version>
 		<plugins.compiler.version>3.8.1</plugins.compiler.version>
 		<plugins.resource.version>3.1.0</plugins.resource.version>
@@ -83,8 +83,6 @@
 						<fork>false</fork>
 						<compilerArgs>
 							<arg>--enable-preview</arg>
-							<arg>--add-modules</arg>
-							<arg>jdk.incubator.foreign</arg>
 							<arg>--add-exports</arg>
 							<arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
 						</compilerArgs>
@@ -95,7 +93,7 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${plugins.surefire.version}</version>
 					<configuration>
-						<argLine>--enable-preview --add-modules jdk.incubator.foreign --add-opens java.base/jdk.internal.misc=ALL-UNNAMED -Xmx1g</argLine>
+						<argLine>--enable-preview --add-opens java.base/jdk.internal.misc=ALL-UNNAMED -Xmx1g</argLine>
 					</configuration>
 				</plugin>
 			</plugins>
